Added some polyfills, fixed a few browser-related issues, finished about page, started working on features page - scroll transitions / animations.

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
 
     <meta name="description" content="Front-end Web Developer that produces high-end responsive cross-browser websites with the best possible user experience.">
     <meta name="keywords" content="web, website, web developer, developer, Philip, Fabianek, Philip Fabianek, front-end, react, responsive, design">
+    <meta property="og:title" content="Philip Fabianek Web Developer" >
+    <meta property="og:description" content="Front-end Web Developer that produces high-end responsive cross-browser websites with the best possible user experience." >
+    <meta property="og:url" content="https://www.philipfabianek.com" >
+    <meta property="og:type" content="website" >
+    <!-- <meta property="og:image" content="" > -->
     <title>Philip Fabianek Web Developer</title>
 
     <!-- Raleway --> <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,400i,600" rel="stylesheet">
