--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <!-- Raleway --> <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,400i,600" rel="stylesheet">
     <!-- Roboto --> <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,400i,600" rel="stylesheet">
     <!-- Passion One --> <link href="https://fonts.googleapis.com/css?family=Passion+One:400,700,900" rel="stylesheet">
+    <!-- Lato --><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
