--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,23 @@
 
 <head>
     <link rel="shortcut icon" href="/favicon/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="/favicon/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="/favicon/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="/favicon/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16.png">
-	<link rel="apple-touch-icon" href="/favicon/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/favicon/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/favicon/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/favicon/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/favicon/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/favicon/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/favicon/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/favicon/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="/favicon/favicon-144.png">
-	<meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,10 +34,10 @@
     <!-- <meta property="og:image" content="" > -->
     <title>Philip Fabianek Web Developer</title>
 
-    <!-- Raleway --> <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,400i,600" rel="stylesheet">
-    <!-- Roboto --> <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,400i,600" rel="stylesheet">
-    <!-- Passion One --> <link href="https://fonts.googleapis.com/css?family=Passion+One:400,700,900" rel="stylesheet">
-    <!-- Lato --><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <!-- Raleway --> <link href="//fonts.googleapis.com/css?family=Raleway:300,400,600&subset=latin,latin-ext" rel="stylesheet">
+    <!-- Roboto --> <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,600&subset=latin,latin-ext" rel="stylesheet">
+    <!-- Passion One --> <link href="//fonts.googleapis.com/css?family=Passion+One:400,700,900&subset=latin,latin-ext" rel="stylesheet">
+    <!-- Lato --><link href="//fonts.googleapis.com/css?family=Lato:300,400,700,900&subset=latin,latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
